added session tv

--- a/res/layout/sessionnew.xml
+++ b/res/layout/sessionnew.xml
@@ -4,15 +4,23 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
+    
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal" >
-        <TextView 
+      <TextView 
             android:id="@+id/textView_sessionID"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/sessionIDRequest"/>
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+
 
         <EditText
             android:id="@+id/editText_sessionID"
