--- a/res/layout/sessionresults.xml
+++ b/res/layout/sessionresults.xml
@@ -24,6 +24,13 @@
         android:layout_height="wrap_content"
         android:text="or have submitted the survey"
         android:textAppearance="?android:attr/textAppearanceLarge" />
+    <scrollView>
+     <ListView
+        android:id="@+id/sessionResultsListView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+    </ListView>
+    </scrollView>
 
     <Button
         android:id="@+id/button_endsession"
