--- a/res/layout/sessionnew.xml
+++ b/res/layout/sessionnew.xml
@@ -9,11 +9,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal" >
-      <TextView 
-            android:id="@+id/textView_sessionID"
+              <TextView 
+            android:id="@+id/textView_sessionName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/sessionIDRequest"/>
+            android:text="@string/sessionNameRequest"/>
+     <EditText
+            android:id="@+id/editText_sessionName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="text" />
 
     </LinearLayout>
     <LinearLayout
@@ -21,6 +26,11 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal" >
 
+              <TextView 
+            android:id="@+id/textView_sessionID"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/sessionIDRequest"/>
 
         <EditText
             android:id="@+id/editText_sessionID"
