--- a/res/layout/sessionpicker.xml
+++ b/res/layout/sessionpicker.xml
@@ -17,5 +17,11 @@
         android:layout_height="wrap_content"
         android:text="@string/joinSessionButton"
         android:onClick="joinSessionClick"/>
+    <Button
+        android:id="@+id/button_logout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/logoutButton"
+        android:onClick="logout"/>
 
 </LinearLayout>
