--- a/res/layout/sessionresults.xml
+++ b/res/layout/sessionresults.xml
@@ -5,24 +5,24 @@
     android:orientation="vertical" >
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/tv_results_sessionName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="List of People that have submitted attendece"
+        android:text=""
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/tv_results_sessionID"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="or have downloaded the file"
+        android:text=""
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/tv_results_sessionType"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="or have submitted the survey"
+        android:text=""
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
      <ListView
