Survey making and answering done - Daniel

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,21 +1,41 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!-- Background source: http://zygat3r.deviantart.com/art/Dark-Wood-58266349 -->
+
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/relativeLayout1"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical" >
+    android:background="@drawable/bg" 
+    >
 
-    <Button
-        android:id="@+id/button_signIn"
+    <TextView
+        android:id="@+id/app_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/signIn"
-        android:onClick="signInClick" />
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="89dp"
+        android:textColor="#FFFFFF"
+        android:text="servé"
+        android:textSize="100dip" />
 
     <Button
         android:id="@+id/button_createAccount"
-        android:layout_width="wrap_content"
+        android:layout_width="200dip"
         android:layout_height="wrap_content"
-        android:text="@string/createAccount"
-        android:onClick="createNewAccountClick" />
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="126dp"
+        android:onClick="createNewAccountClick"
+        android:text="@string/createAccount" />
 
-</LinearLayout>
+    <Button
+        android:id="@+id/button_signIn"
+        android:layout_width="200dip"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/button_createAccount"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="14dp"
+        android:onClick="signInClick"
+        android:text="@string/signIn" />
+
+</RelativeLayout>
