--- a/res/layout/sessionresults.xml
+++ b/res/layout/sessionresults.xml
@@ -5,24 +5,24 @@
     android:orientation="vertical" >
 
     <TextView
-        android:id="@+id/tv_results_sessionName"
+        android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text=""
+        android:text="List of People that have submitted attendece"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
-        android:id="@+id/tv_results_sessionID"
+        android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text=""
+        android:text="or have downloaded the file"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
-        android:id="@+id/tv_results_sessionType"
+        android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text=""
+        android:text="or have submitted the survey"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
      <ListView
@@ -30,27 +30,5 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
     </ListView>
-
-
-    <Button
-        android:id="@+id/button_endsession"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/endSessionButton"
-        android:onClick="endSessionClick" />
-
-    <Button
-        android:id="@+id/button_savesession"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/saveSessionButton"
-        android:onClick="saveSessionClick" />
-
-    <Button
-        android:id="@+id/button_emailsession"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/emailButton"
-        android:onClick="emailSessionClick" />
 
 </LinearLayout>
