--- a/res/layout/sessionexisting.xml
+++ b/res/layout/sessionexisting.xml
@@ -1,23 +1,33 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/relativeLayout1"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="@drawable/bg" >
 
     <EditText
         android:id="@+id/et_sessionkey"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textPassword" >
-
-        <requestFocus />
-    </EditText>
+        android:layout_alignParentLeft="true"
+        android:layout_centerVertical="true"
+        android:inputType="textPassword" />
 
     <Button
         android:id="@+id/button_sessionkeysubmit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/sessionKeyButton"
-        android:onClick="submitCodeClick" />
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/et_sessionkey"
+        android:onClick="submitCodeClick"
+        android:text="@string/sessionKeyButton" />
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/et_sessionkey"
+        android:layout_alignParentLeft="true"
+        android:text="Session ID:"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+</RelativeLayout>
