--- a/res/layout/sessionpicker.xml
+++ b/res/layout/sessionpicker.xml
@@ -1,27 +1,37 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/relativeLayout1"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="@drawable/bg"
+     >
 
     <Button
-        android:id="@+id/button_startsession"
-        android:layout_width="wrap_content"
+        android:id="@+id/button_logout"
+        android:layout_width="200dip"
         android:layout_height="wrap_content"
-        android:text="@string/startSessionButton"
-        android:onClick="newSessionClick" />
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="173dp"
+        android:onClick="logout"
+        android:text="@string/logoutButton" />
 
     <Button
         android:id="@+id/button_joinsession"
-        android:layout_width="wrap_content"
+        android:layout_width="200dip"
         android:layout_height="wrap_content"
-        android:text="@string/joinSessionButton"
-        android:onClick="joinSessionClick"/>
-    <Button
-        android:id="@+id/button_logout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/logoutButton"
-        android:onClick="logout"/>
+        android:layout_alignLeft="@+id/button_logout"
+        android:layout_centerVertical="true"
+        android:onClick="joinSessionClick"
+        android:text="@string/joinSessionButton" />
 
-</LinearLayout>
+    <Button
+        android:id="@+id/button_startsession"
+        android:layout_width="200dip"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/button_joinsession"
+        android:layout_alignLeft="@+id/button_joinsession"
+        android:layout_marginBottom="10dp"
+        android:onClick="newSessionClick"
+        android:text="@string/startSessionButton" />
+
+</RelativeLayout>
