--- a/res/layout/sessionnew.xml
+++ b/res/layout/sessionnew.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:background="@drawable/bg" >
 
     
     <LinearLayout
@@ -48,7 +49,7 @@
             android:id="@+id/textView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Type" />
+            android:text="@string/sessionTypeTV" />
 
         <Spinner
             android:id="@+id/spinner_type"
@@ -62,7 +63,7 @@
         android:id="@+id/submitButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Create Session"
+        android:text="@string/createSessionButton"
         android:onClick="submit" />
 
 </LinearLayout>
