--- a/res/layout/sessionresultsurvey.xml
+++ b/res/layout/sessionresultsurvey.xml
@@ -3,7 +3,8 @@
     android:id="@+id/SCROLL_VIEW"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:background="@drawable/bg" >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -194,7 +195,8 @@
             android:id="@+id/createSurveyButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Create Survey" />
+            android:text="Create Survey"
+            android:onClick="createSurveyClick" />
     </LinearLayout>
 
 </ScrollView>
